[package]
name = "kant-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
deno_core = "0.164.0"
deno_runtime = "0.90.0"
reqwest = "0.11.13"
tokio = "1.21.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.43.0", features = ["Win32_Graphics_Gdi", "Win32_Foundation", "Win32_System_Diagnostics_Debug"] }

[target.'cfg(unix)'.dependencies]
beep = "0.3.0"
