[package]
name = "kant-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.68", features = ["backtrace"] }
chrono = "0.4.23"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.44.0", features = ["Win32_Graphics_Gdi", "Win32_Foundation", "Win32_System_Diagnostics_Debug", "Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_Devices_Display", "Win32_System_Shutdown", "Win32_Graphics_Printing", "Win32_Security"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26.1", default-features = false, features = ["fs", "ioctl"] }
lazy_static = "1.4.0"

[profile.release]
strip = true
lto = true
